tests/NormalTests/paczka1/small_fuzzy/25193591.err
Error in line 1: Gnopt3lP S700 12,3
Error in line 11: 6a2 A899 73,9
Error in line 13: A814 A899 129,6
